# Miscals

./: .replit  batting_shots.json  bowling_types.json  cricket_stats.py  data.json  dismissals.json  elite_players.json  main.py  main_bottom.py  main_expanded.py  main_top.py  matchupdates.py  my_database.db  player_emojis.json  player_stickers.json  playerlife.py  players.db  players.json  pyproject.toml  replit.md  replit.nix  requirements.txt  s.db  series.py  tournament.py  user.db
attached_assets/: Pasted--FANTASY-CRICKET-QUICK-INTEGRATIO-1770666969917_1770666969920.txt  Pasted-discord-ext-commands-errors-CommandNotFound-Command-set_1768934360702.txt
