[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "^2.3.2"
p-stone-labs = "^0.32"
jishaku = "2.5.1"
discord-py-slash-command = "^4.2.1"
openai = "^0.28.1"
pandas = "^2.1.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
mysql-connector-python = "^8.2.0"
numerize = "^0.12"
numpy = "^1.26.1"
flask = "^3.0.0"
apscheduler = "^3.10.4"
google-images-search = "^1.4.6"
pytz = "^2023.3.post1"
discord-py = "^2.3.2"
functions = "^0.7.0"
aiohttp = "^3.13.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"